<resources>
    <string name="app_name">Shawer App</string>
    <string name="notification_channel_id">Shawer App</string>
    <string name="error_should_not_be_empty">This field should not be empty!</string>
    <string name="error_default">Oops! Something went wrong..</string>
    <string name="error_no_user_logged_in">No user logged in</string>
    <string name="error_email_not_verified">You need to verfiy your email before you can use the app. Verfication email may take up to 30 mintues.</string>
    <string name="error_email_format">Incorrect email format</string>
    <string name="error_no_connection">Please check your internet connection</string>
    <string name="error_file_create">Failed to create file</string>
    <string name="legal_consultations_advices">Legal Consultations &amp; Advices</string>
    <string name="splash_text_1">إستشارات ونصائح قانونية</string>
    <string name="signup_message">select your account type &amp; signup</string>
    <string name="individual">Individual</string>
    <string name="commercial">Commercial</string>
    <string name="lawyer">Lawyer</string>
    <string name="account_type">Account Type</string>
    <string name="onboarding1">In Shawer you can ask any legal question for a lawyer of your choice</string>
    <string name="onboarding1_arabic">اختر المجال المطلوب</string>
    <string name="onboarding2">Consult your lawyer and get legal answers from anywhere in the world</string>
    <string name="onboarding2_arabic">اختر محاميك المفضل</string>
    <string name="onboarding3">Request a lawyer to represent you legally and we will find the best for you</string>
    <string name="onboarding3_arabic">إسأل سؤالك</string>
    <string name="onboarding4">Get Your Answer</string>
    <string name="onboarding4_arabic">احصل على إجابتك</string>
    <string name="register_caps">REGISTER</string>
    <string name="login_caps">LOGIN</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="terms_and_privacy_policy_message">By signing up you agree to our terms and conditions and our privacy policy as well</string>
    <string name="hint_username">Username</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">\u00B7\u00B7\u00B7\u00B7\u00B7\u00B7\u00B7\u00B7\u00B7\u00B7</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="hint_work_email_address">Work Email Address</string>
    <string name="activate_message">Now follow the instructions\nthat been sent to your email address,\nso you could activate your account\nOr wait for a call from us for more details</string>
    <string name="activate_your_account">Activate Your Account</string>
    <string name="ok_caps">OK</string>
    <string name="validate_message">Enter the 6 digits code you received on your email\naddress, to validate your account &amp; continue</string>
    <string name="activate_account_caps">ACTIVATE ACCOUNT</string>
    <string name="resend_question">Didn\'t get the code?</string>
    <string name="resend">resend it</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="a_b_c">A B C</string>
    <string name="_3">3</string>
    <string name="d_e_f">D E F</string>
    <string name="_4">4</string>
    <string name="g_h_i">G H I</string>
    <string name="_5">5</string>
    <string name="j_k_l">J K L</string>
    <string name="_6">6</string>
    <string name="m_n_o">M N O</string>
    <string name="_7">7</string>
    <string name="p_q_r_s">P Q R S</string>
    <string name="_8">8</string>
    <string name="t_u_v">T U V</string>
    <string name="_9">9</string>
    <string name="w_x_y_z">W X Y Z</string>
    <string name="_0">0</string>
    <string name="expiry_message">code expires in</string>
    <string name="default_timer">00:00</string>
    <string name="welcome_message">Welcome to Shawer App</string>
    <string name="login_message">login to your account to\nask any legal question or request a practice work</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_here">New Here?</string>
    <string name="forgot_password_message_caps">FORGOT YOUR PASSWORD? DON\'T WORRY</string>
    <string name="forgot_password_message_2">just type your username or your email address below,\nand we will send you a recovery link\n-if your data exists in our records-</string>
    <string name="hint_username_or_email">Username or Email Address</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="reset_password_caps">RESET PASSWORD</string>
    <string name="btn_login_to_account">Login to your account?</string>
    <string name="reset_password_message1">Your Password Rest Link is On The Way</string>
    <string name="reset_password_message2">Click on the secure link we just sent you\nto reset your account password\n-Please check your SPAM folder as well-</string>
    <string name="more">More</string>
    <string name="practice">Practice</string>
    <string name="shawer_caps">SHAWER</string>
    <string name="lawyers">Lawyers</string>
    <string name="profile">Profile</string>
    <string name="fullname">Full Name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="label_lawyers">Lawyers</string>
    <string name="label_favorite_list">Favorite List</string>
    <string name="label_hint_search_lawyer">Search by lawyer username</string>
    <string name="label_hint_search_user">Search by User Username</string>
    <string name="menu_title_toggle_favorites">Toggle Favorites</string>
    <string name="label_profile_questions_raised">Questions</string>
    <string name="label_profile_answered">Answers</string>
    <string name="label_profile_likes">Likes</string>
    <string name="label_profile_experience">Experience</string>
    <string name="label_title_new_question">New Question</string>
    <string name="label_subtitle_field_selection">Select a field</string>
    <string name="label_hint_search_field">Search by field or description</string>
    <string name="label_hint_search_sub_subject">Search by sub-subject or description</string>
    <string name="label_hint_search_lawyer_new_case">Search in Lawyers Names</string>
    <string name="label_settings_app_description1">إســتــشــارات ونــصــائــح قــانــونــيــة</string>
    <string name="label_settings_app_description2">Legal Consultations &amp; Advices</string>
    <string name="label_settings_app_version">Version %1$s</string>
    <string name="label_settings_app_name">Shawer</string>
    <string name="label_settings_coins_balance">Invoices</string>
    <string name="label_settings_application_language">Application Language</string>
    <string name="label_settings_notification">Notification</string>
    <string name="label_settings_signout">Sign Out</string>
    <string name="label_settings_terms_and_conditions">Terms and Conditions</string>
    <string name="label_settings_privacy_policy">Privacy Policy</string>
    <string name="label_settings_review_app">Rate the application and review in Play Store</string>
    <string name="label_settings_feedback_suggestions">Tell us your Feedback &amp; Suggestions</string>
    <string name="label_settings_share_app">Share the Application and Tell your Friends</string>
    <string name="label_settings_support">Support</string>
    <string name="label_settings_remaining_coins">%s SAR</string>
    <string name="label_settings_add_coins">Add More</string>
    <string name="label_settings_language_english">English</string>
    <string name="label_settings_language_arabic">عربي</string>
    <string name="label_tutorial_title">How to use</string>
    <string name="label_report_title">Report Bad Usage</string>
    <string name="label_report_subtitle">Select a user from below</string>
    <string name="label_report_dialog_header">Confirm Your Report</string>
    <string name="label_report_dialog_content">Your report of bad usage is submitted\n successfully and under review. \n Thank you for your interest</string>
    <string name="label_compose_question_default_title">Subject</string>
    <string name="label_compose_question_title_new_case">New Case</string>
    <string name="label_compose_question_default_subtitle">Lawyer Name</string>
    <string name="label_compose_question_subtitle_confirm_case">Confirm your question</string>
    <string name="label_compose_question_primary_instruction">Ask Your Question to the Lawyer You Picked</string>
    <string name="label_compose_question_sub_description_1">Record, Type &amp; Attach Files</string>
    <string name="label_compose_question_sub_description_2">Review &amp; Check</string>
    <string name="label_compose_question_sub_description_3">Pay &amp; SEND</string>
    <string name="label_compose_question_edit_hint">Start typing your question here, or your notes. And remember, this field is optional and up to 300 characters.</string>
    <string name="label_compose_answer_edit_hint">Start typing your answer here, or your notes. And remember, this field is optional and up to 300 characters.</string>
    <string name="label_attachment_info">%1s - %2s</string>
    <string name="label_compose_question_fee">%s SAR</string>
    <string name="label_compose_pay_gem">Tap the Pay icon to pay \n and to send your question</string>
    <string name="label_compose_confirm_dialog">Congratulations, Your question has been sent. \nAnd %1s SAR had been deducted from your balance too.</string>
    <string name="label_title_requesting_shawer">Requesting Shawer</string>
    <string name="label_hint_subsubject_name">Search by sub-subject name</string>
    <string name="debug_fill_text">Lorem ipsum dolor sit amet, aliquet hendrerit deserunt fringilla semper ratione. Mi mauris. Quam et morbi sodales id cum nulla, praesent nulla donec aptent sed, enim consectetuer sollicitudin tristique quis sed parturient, ullamcorper tristique. Et amet lobortis gravida est et, sit suspendisse rutrum dignissim, nec integer ac hendrerit viverra, bibendum semper, duis ipsum. Donec orci maecenas orci, phasellus non, magna enim quam vitae adipiscing, pulvinar vehicula mus nostra sollicitudin, tempor aliquam consequat ut. Magna curabitur aliquam eget dolor, duis vestibulum dui vehicula. Wisi mollis sit eros non. Nec justo leo pede enim elit, accumsan inceptos nunc consectetuer nunc, nulla nibh maecenas mauris egestas, quam nonummy euismod integer posuere ut, tempor quo tempus bibendum lacinia sagittis massa. Porttitor aliqua, eu praesent lorem aliquam sollicitudin, ullamcorper lorem arcu ornare, lorem ante.</string>
    <string name="label_title_new_request">New Request</string>
    <string name="label_item_sub_subject_count">%d Sub-Subject</string>
    <string name="label_title_asking_shawer">Asking Shawer</string>
    <string name="label_title_answering_shawer">Answering Shawer</string>
    <string name="label_subtitle_select_subsubject">Select a sub-subject</string>
    <string name="label_sub_subject_lawyer_count">%d Lawyers</string>
    <string name="label_coin_fee">%d SAR</string>
    <string name="label_compose_request_title">New Practice Request</string>
    <string name="label_compose_request_primary_instruction">Tell us about your case, in details, and we will find the best Lawyer for Your Legal Prosecution</string>
    <string name="label_compose_response_primary_instruction">Based On The Lawyer Request, \n Send Your Respond</string>
    <string name="label_compose_answer_primary_instruction">Answer the Question You \n Selected</string>
</resources>